maze.lessons.maze.wallfollower.WallFollowerMaze.scala.error
Escaper:22: error: ';' expected but 'else' found.
		else {
                ^